samples/_failures_safe/1761357355_5705db_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1cac836f.c: In function ‘main’:
./samples/SAFE/__tmp_1cac836f.c:157:12: error: missing terminating " character
  157 |     printf("\
      |            ^~
./samples/SAFE/__tmp_1cac836f.c:157:5: error: expected expression at end of input
  157 |     printf("\
      |     ^~~~~~
./samples/SAFE/__tmp_1cac836f.c:157:5: error: expected declaration or statement at end of input
